<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".PipelineInfoActivity">

    <TextView
        android:id="@+id/loading_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading_placeholder"
        android:textAlignment="center"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/content_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/definition_full_json_test_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/author"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/definition_author_image"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_margin="5sp"
                    android:contentDescription="@string/definition_author"
                    app:srcCompat="@drawable/build_success" />

                <TextView
                    android:id="@+id/definition_author_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author_name" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/latest_build"
                android:textStyle="bold" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/latest_build_fragment"
                android:name="ru.capchik.personalproject.BuildItemFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/latest_completed_build_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/completed_build"
                android:textStyle="bold" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/latest_completed_build_fragment"
                android:name="ru.capchik.personalproject.BuildItemFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/repository"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/repo_owner_image"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_margin="5sp"
                android:contentDescription="@string/definition_author"
                app:srcCompat="@drawable/build_success" />

            <TextView
                android:id="@+id/repo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/repository"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/main_branch" />


            <TextView
                android:id="@+id/repo_main_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="5sp"
                android:text="@string/repository_main_branch"
                android:textSize="15sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/path"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/definition_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="5sp"
                android:text="@string/definition_path"
                android:textSize="15sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/created"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/definition_created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="5sp"
                android:text="@string/definition_created"
                android:textSize="15sp"
                android:textStyle="italic" />

        </LinearLayout>

        <Button
            android:id="@+id/open_definition_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/open_definition" />

    </LinearLayout>
</LinearLayout>
